--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -5,5 +5,10 @@
   <%= @department.nombre %>
 </p>
 
+<p>
+  <strong>Headquarter:</strong>
+  <%= @department.headquarter %>
+</p>
+
 <%= link_to 'Edit', edit_department_path(@department) %> |
 <%= link_to 'Back', departments_path %>
