--- a/app/views/departments/_form.html.erb
+++ b/app/views/departments/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.label :nombre %><br>
     <%= f.text_field :nombre %>
   </div>
+  <div class="field">
+    <%= f.label :headquarter_id %><br>
+    <%= f.text_field :headquarter_id %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
