--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Headquarter:</strong>
-  <%= @department.headquarter %>
+  <%= @department.headquarter.nombre %>
 </p>
 
 <%= link_to 'Edit', edit_department_path(@department) %> |
