--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,18 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <header>
+    <nav class="navbar navbar-default" role="navigation">
+      <div class="container">
+        <ul class="nav navbar-nav">
+               
+               <li><%= link_to "Inicio", "/"%></li>
+                <li><%= link_to "Departamentos", departamentos_path%></li>
+               <li ><%= link_to "Cargos", cargos_path%></li>
+             </ul>
+      </div>
+    </nav>
+  </header>
 
 <%= yield %>
 
