--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,25 @@
 </head>
 <body>
   <header>
-    <nav class="navbar navbar-default" role="navigation">
-      <div class="container">
-        <ul class="nav navbar-nav">
+    <nav class="navbar navbar-default navbar-fixed-top collapse navbar-collapse" role="navigation">
+<div class="container-fluid">
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav ">
+            <li class="navbar-brand"><b>nominaX</b></li>
 
                <li><%= link_to "Inicio", "/"%></li>
+               <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
                 <li><%= link_to "Departamentos", departamentos_path%></li>
                 <li ><%= link_to "Tipos", tipos_path%></li>
                <li ><%= link_to "Cargos", cargos_path%></li>
@@ -20,9 +34,11 @@
 
              </ul>
       </div>
+    </div>
     </nav>
   </header>
 <article class="container">
+  <%= flash_messages %>
 <%= yield %>
 </aticle>
 <footer></footer>
