--- a/app/views/personas/index.html.erb
+++ b/app/views/personas/index.html.erb
@@ -1,8 +1,7 @@
-<p id="notice"><%= notice %></p>
 
 <h1>Listing Personas</h1>
 
-<table class="table table-hover table-responsive table-bordered">
+<table class="table table-hover table-responsive table-bordered table-condensed">
   <thead>
     <tr>
       <th>Cedula</th>
@@ -17,7 +16,9 @@
       <th>Status</th>
       <th>Cargo</th>
       <th>Cargas familiares</th>
-      <th colspan="3"></th>
+      <th>Ver</th>
+      <th>Editar</th>
+      <th>Eliminar</th>
     </tr>
   </thead>
 
@@ -36,9 +37,10 @@
         <td><%= $dic["status"].key(persona.status) %></td>
         <td><%= persona.cargo.nombre %></td>
         <td><%= persona.cargas_familiares %></td>
-        <td><span class="glyphicon glyphicon-ok"></span><%= link_to 'Show', persona %></td>
-        <td><%= link_to 'Edit', edit_persona_path(persona) %></td>
-        <td><%= link_to 'Destroy', persona, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to '', persona,class: "glyphicon glyphicon-user" %></td>
+        <td><%= link_to '', edit_persona_path(persona),class: "glyphicon glyphicon-pencil" %></td>
+        <td><%= link_to '', persona,class: "glyphicon glyphicon-trash", method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
       </tr>
     <% end %>
   </tbody>
