--- a/app/views/departamentos/index.html.erb
+++ b/app/views/departamentos/index.html.erb
@@ -1,11 +1,11 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Departamentos</h1>
+<h1><%=t("dep_lista")%></h1>
 
 <table>
   <thead>
     <tr>
-      <th>Nombre</th>
+      <th><%=t("nombre")%></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,9 +14,9 @@
     <% @departamentos.each do |departamento| %>
       <tr>
         <td><%= departamento.nombre %></td>
-        <td><%= link_to 'Show', departamento %></td>
-        <td><%= link_to 'Edit', edit_departamento_path(departamento) %></td>
-        <td><%= link_to 'Destroy', departamento, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to t("ver"), departamento %></td>
+        <td><%= link_to t("editar"), edit_departamento_path(departamento) %></td>
+        <td><%= link_to t("eliminar"), departamento, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Departamento', new_departamento_path %>
+<%= link_to t("dep_nuevo"), new_departamento_path %>
