--- a/app/views/departamentos/new.html.erb
+++ b/app/views/departamentos/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Departamento</h1>
+<h1><%= t('dep_nuevo')%></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', departamentos_path %>
+<%= link_to t("volver"), departamentos_path %>
