--- a/app/views/personas/_form.html.erb
+++ b/app/views/personas/_form.html.erb
@@ -62,6 +62,10 @@
 <%end%>
   </div>
   <div class="col-xs-6 form-group">
+    <%= f.label :cuenta %><br>
+    <%= f.number_field :cuenta ,:class => "form-control" %>
+  </div>
+  <div class="col-xs-6 form-group">
     <%= f.label :cargas_familiares %><br>
     <%= f.number_field :cargas_familiares ,:class => "form-control" %>
   </div>
