--- a/app/views/personas/show.html.erb
+++ b/app/views/personas/show.html.erb
@@ -5,7 +5,8 @@
 
     <p></p>
   </div>
-  <div class"pull-right col-sm-3"><%= image_tag @persona.avatar.url(:thumb), class:"img-circle img-responsive" %></div>
+  <div class="img-rounded"></div>
+  <div class"pull-right col-sm-3"><%= image_tag @persona.avatar.url(:thumb), class:"img-circle  img-rounded img-responsive" %></div>
 </div>
 <div class="col-sm-4">
             <!--left col-->
@@ -14,12 +15,16 @@
                 <li class="list-group-item text-right"><span class="pull-left"><strong class="">status</strong></span> <%= $dic["status"].key(@persona.status) %></li>
                 <li class="list-group-item text-right"><span class="pull-left"><strong class="">Departamento</strong></span> <%= @persona.cargo.departamento.nombre %></li>
                 <li class="list-group-item text-right"><span class="pull-left"><strong class="">Cargo</strong></span> <%= @persona.cargo.nombre%></li>
+                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Sueldp</strong></span> <%= @persona.cargo.sueldos.last.monto%></li>
+
                 <li class="list-group-item text-right"><span class="pull-left"><strong class="">Cedula</strong></span> <%= $dic["tipos_de_cedula"].key(@persona.tipo_de_cedula).to_s+@persona.cedula %></li>
                 <li class="list-group-item text-right"><span class="pull-left"><strong class="">Nombres</strong></span> <%= @persona.nombres %></li>
                 <li class="list-group-item text-right"><span class="pull-left"><strong class="">Apellidos</strong></span> <%= @persona.apellidos %></li>
                 <li class="list-group-item text-right"><span class="pull-left"><strong class="">Telefonos</strong></span><%= @persona.telefono_fijo %></li>
                 <li class="list-group-item text-right"><span class="pull-left"><strong class=""></strong></span> <%= @persona.telefono_movil %></li>
                 <li class="list-group-item text-right"><span class="pull-left"><strong class="">Correo</strong></span> <%= @persona.correo %></li>
+                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Cuenta</strong></span> <%= @persona.cuenta %></li>
+
                 <li class="list-group-item text-right"><span class="pull-left"><strong class="">Fecha de nacimiento</strong></span> <%= @persona.fecha_de_nacimiento %></li>
                 <li class="list-group-item text-right"><span class="pull-left"><strong class="">Direccion</strong></span><%= @persona.direccion %></li>
                 <li class="list-group-item text-right"><span class="pull-left"><strong class="">Carga Familiar</strong></span> <%= @persona.cargas_familiares %></li>
