--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,4 +15,5 @@
  */
  @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "font-awesome";
   body { padding-top: 70px; padding-bottom: 70px}
