--- a/app/views/departamentos/_form.html.erb
+++ b/app/views/departamentos/_form.html.erb
@@ -1,21 +1,22 @@
 <%= form_for(@departamento) do |f| %>
-  <% if @departamento.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@departamento.errors.count, "error") %> prohibited this departamento from being saved:</h2>
+<% if @departamento.errors.any? %>
+<div id="error_explanation">
+  <h2><%= pluralize(@departamento.errors.count, "error") %>
+    prohibited this departamento from being saved:</h2>
 
-      <ul>
-      <% @departamento.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <ul>
+    <% @departamento.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+    <% end %>
+  </ul>
+</div>
+<% end %>
 
-  <div class="form-group">
-    <%= f.label :nombre %><br>
-    <%= f.text_field :nombre ,class: "form-control"%>
-  </div>
-  <div class="actions">
-    <%= f.submit t("dep_crear") %>
-  </div>
+<div class="form-group">
+  <%= f.label :nombre %><br>
+  <%= f.text_field :nombre ,class: "form-control"%>
+</div>
+<div class="actions">
+  <%= f.submit t("dep_crear"), class:  "btn bnt-default" %>
+</div>
 <% end %>
