--- a/app/views/departamentos/index.html.erb
+++ b/app/views/departamentos/index.html.erb
@@ -2,10 +2,11 @@
 
 <h1><%=t("dep_lista")%></h1>
 
-<table>
+<table class="table table-bordered table-condensed table-responsive table-bordered">
   <thead>
     <tr>
       <th><%=t("nombre")%></th>
+      <th>Personas</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,6 +15,7 @@
     <% @departamentos.each do |departamento| %>
       <tr>
         <td><%= departamento.nombre %></td>
+        <th><%=Cargo.where("departamento_id=#{departamento.id} and disponible=false").length %></th>
         <td><%= link_to t("ver"), departamento %></td>
         <td><%= link_to t("editar"), edit_departamento_path(departamento) %></td>
         <td><%= link_to t("eliminar"), departamento, method: :delete, data: { confirm: 'Are you sure?' } %></td>
