--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div class="jumbotron" style="background: url('/assets/banner.png') no-repeat center center;" >
+  <h1>Hello, world!</h1>
+  <p>...</p>
+  <div class="btn btn-primary"><%= link_to "Registrarse", new_usuario_registration_path%></div>
+  <div class="btn btn-primary"><%= link_to "Iniciar sesion", new_usuario_session_path%></div>
+
+</div>
