--- a/app/views/departamentos/edit.html.erb
+++ b/app/views/departamentos/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to t("ver"), @departamento %> |
-<%= link_to t("volver"), departamentos_path %>
+<%= link_to "Ver", @departamento, class: "btn btn-default"  %> |
+<%= link_to "Regresar", departamentos_path, class: "btn btn-default"  %>
