--- a/app/views/dependencias/show.html.erb
+++ b/app/views/dependencias/show.html.erb
@@ -5,5 +5,5 @@
   <%= @dependencia.nombre %>
 </p>
 
-<%= link_to 'Edit', edit_dependencia_path(@dependencia) %> |
-<%= link_to 'Back', dependencias_path %>
+<%= link_to 'Editar', edit_dependencia_path(@dependencia), class: "btn btn-default" %>
+<%= link_to 'Regresar', dependencias_path, class: "btn btn-default" %>
