--- a/app/views/tipos/edit.html.erb
+++ b/app/views/tipos/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing Tipo</h1>
+<h1>Editar Tipo</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @tipo %> |
-<%= link_to 'Back', tipos_path %>
