--- a/app/views/tipos/show.html.erb
+++ b/app/views/tipos/show.html.erb
@@ -5,5 +5,5 @@
   <%= @tipo.nombre %>
 </p>
 
-<%= link_to 'Edit', edit_tipo_path(@tipo) %> |
-<%= link_to 'Back', tipos_path %>
+<%= link_to 'Editar', edit_tipo_path(@tipo), class: "btn btn-default" %>
+<%= link_to 'regresar', tipos_path, class: "btn btn-default"  %>
