--- a/app/views/departamentos/index.html.erb
+++ b/app/views/departamentos/index.html.erb
@@ -1,29 +1,42 @@
 <p id="notice"><%= notice %></p>
 
-<h1><%=t("dep_lista")%></h1>
+<h1><%= "Departamentos" %></h1>
 
-<table class="table table-bordered table-condensed table-responsive table-bordered">
-  <thead>
-    <tr>
-      <th><%=t("nombre")%></th>
-      <th>Personas</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    Lista de Departamentos
+  </div>
+  <div class="panel-body">
+    <div class="table-responsive">
+      <table class="table table-bordered table-condensed table-responsive table-bordered" id="dataTables-example">
+        <thead>
+          <tr>
+            <th><%=t("nombre")%></th>
+            <th>Personas</th>
+            <th>Ver</th>
+            <th>Editar</th>
+            <th>Eliminar</th>
+          </tr>
+        </thead>
 
-  <tbody>
-    <% @departamentos.each do |departamento| %>
-      <tr>
-        <td><%= departamento.nombre %></td>
-        <th><%=Cargo.where("departamento_id=#{departamento.id} and disponible=false").length %></th>
-        <td><%= link_to t("ver"), departamento %></td>
-        <td><%= link_to t("editar"), edit_departamento_path(departamento) %></td>
-        <td><%= link_to t("eliminar"), departamento, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+        <tbody>
+          <% @departamentos.each do |departamento| %>
+          <tr>
+            <td><%= departamento.nombre %></td>
+            <th><%=Cargo.where("departamento_id=#{departamento.id} and disponible=false").length %></th>
+            <td><%= link_to '', departamento,class: "glyphicon glyphicon-user" %></td>
+            <td><%= link_to '', edit_departamento_path(departamento),class: "glyphicon glyphicon-pencil" %></td>
+            <td><%= link_to '', departamento,class: "glyphicon glyphicon-trash", method: :delete, data: { confirm: 'Esta seguro?' } %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
 
-<br>
+<script>
+  $('#dataTables-example').DataTable({responsive: true});
+</script>
 
-<%= link_to t("dep_nuevo"), new_departamento_path %>
+<%= link_to t("dep_nuevo"), new_departamento_path, class: "btn btn-default"  %>
