--- a/app/views/departamentos/new.html.erb
+++ b/app/views/departamentos/new.html.erb
@@ -1,5 +1,3 @@
-<h1><%= t('dep_nuevo')%></h1>
+<h1><%= "Nuevo Departamento"%></h1>
 
 <%= render 'form' %>
-
-<%= link_to t("volver"), departamentos_path %>
