--- a/app/views/dependencias/_form.html.erb
+++ b/app/views/dependencias/_form.html.erb
@@ -1,21 +1,33 @@
-<%= form_for(@dependencia) do |f| %>
-  <% if @dependencia.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@dependencia.errors.count, "error") %> prohibited this dependencia from being saved:</h2>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    Datos
+  </div>
+  <div class="panel-body">
+    <div class="row">
+      <%= form_for(@dependencia) do |f| %>
+      <% if @dependencia.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@dependencia.errors.count, "error") %>
+          prohibited this dependencia from being saved:</h2>
 
-      <ul>
-      <% @dependencia.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+        <ul>
+          <% @dependencia.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
       <% end %>
-      </ul>
-    </div>
-  <% end %>
+      <div class="form-group col-md-12">
+        <%= f.label :nombre %><br>
+        <%= f.text_field :nombre, class:"form-control" %>
+      </div>
+      <div class="actions col-md-12">
+        <%= f.submit "Guardar", class: "btn btn-default" %>
+        <%= link_to 'Regresar', dependencias_path, class: "btn btn-default" %>
+      </div>
 
-  <div class="field">
-    <%= f.label :nombre %><br>
-    <%= f.text_field :nombre %>
+
+    </div>
   </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+
+  <% end %>
