--- a/app/views/tipos/index.html.erb
+++ b/app/views/tipos/index.html.erb
@@ -1,27 +1,41 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Tipos</h1>
+<h1>Tipos</h1>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    Lista de Tipos
+  </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Nombre</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <div class="panel-body">
+    <div class="table-responsive">
+      <table class="table table-bordered table-condensed table-responsive table-bordered" id="dataTables-example">
+        <thead>
+          <tr>
+            <th>Nombre</th>
+            <th>Ver</th>
+            <th>Editar</th>
+            <th>Eliminar</th>
+          </tr>
+        </thead>
 
-  <tbody>
-    <% @tipos.each do |tipo| %>
-      <tr>
-        <td><%= tipo.nombre %></td>
-        <td><%= link_to 'Show', tipo %></td>
-        <td><%= link_to 'Edit', edit_tipo_path(tipo) %></td>
-        <td><%= link_to 'Destroy', tipo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+        <tbody>
+          <% @tipos.each do |tipo| %>
+          <tr>
+            <td><%= tipo.nombre %></td>
+            <td><%= link_to '', tipo,class: "glyphicon glyphicon-user" %></td>
+            <td><%= link_to '', edit_tipo_path(tipo),class: "glyphicon glyphicon-pencil" %></td>
+            <td><%= link_to '', tipo,class: "glyphicon glyphicon-trash", method: :delete, data: { confirm: 'Esta seguro?' } %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
 
-<br>
+</div>
 
-<%= link_to 'New Tipo', new_tipo_path %>
+<script>
+  $('#dataTables-example').DataTable({responsive: true});
+</script>
+
+<%= link_to 'Nuevo Tipo', new_tipo_path, class: "btn btn-default" %>
